--- a/content.css
+++ b/content.css
@@ -29,13 +29,13 @@
 }
 
 span.accent_plain{
-    border-top: solid 1px black;
+    border-top: solid 1px;
     padding-top:1px;
 }
 
 span.accent_top{
-    border-top: solid 1px black;
-    border-right: solid 1px black;
+    border-top: solid 1px;
+    border-right: solid 1px;
     padding-top:1px;
     margin-right: 1px;
     padding-right: 1px;
